[tool.poetry]
name = "namespace_testing"
version = "0.1.0"
description = ""
authors = ["Edward Boulderstone <Edward.Boulderstone@Bjss.com>"]
readme = ""
packages = [
    { include = "namespace_testing" },
]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
